# fpse-smt-solver

./: .gitignore  Code Checkpoint.md  Design.md  Future_Work_after_Checkpoint.md  LICENSE  README.md
demo/: dune-project
demo/dream/: dune
demo/landmarks/: dune  main.ml
smt-solver/backend/: backend.opam  dune-project
smt-solver/backend/lib/sat_cdcl/: assignment.ml  assignment.mli  clause.ml  dune  literal.ml  variable.ml  variable.mli
smt-solver/frontend/: package.json  pnpm-lock.yaml
smt-solver/frontend-bk/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
smt-solver/frontend-bk/lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  build.ninja  install.ninja
smt-solver/frontend-bk/lib/bs/src/: App.ast  App.cmt  App.cmti  App.d  App.iast  Button.ast  Button.cmj  Button.cmt  Button.cmti  Button.iast  Main.ast  Main.cmj  Main.cmt
smt-solver/frontend-bk/src/: App.res  App.res.mjs
solver/: dune-project  gen.py  solver.opam
solver/lib/cdcl/: assignment.ml  assignment.mli  clause.ml  clause.mli  dune  formula.ml  formula.mli  heuristic.ml  heuristic.mli  literal.ml  literal.mli  solver.ml  solver.mli  variable.ml  variable.mli
solver/lib/dimacs/: dune  parser.ml  parser.mli  utils.ml  utils.mli
solver/lib/ilp/: bitvec.ml  bitvec.mli  dune
solver/lib/smt/: bitop.ml  bitop.mli  bitvec.ml  bitvec.mli  bvop.ml  bvop.mli  context.ml  context.mli  dune
solver/lib/vm/: dune  parser.ml  parser.mli  utils.ml
solver/python/: cdcl.py  cdcl_optimized.py  gates.py  solve.py  test.py
solver/test/: dune  tests.ml
solver/test/cdcl/: assignment_tests.ml  cdcl_tests.ml  clause_tests.ml  dune  formula_tests.ml  literal_tests.ml  solver_tests.ml
solver/test/dimacs/: dimacs_tests.ml  dune  parser_tests.ml
solver/test/files/: example.cnf  example.smt  sudoku.2x2.cnf  sudoku.cnf  sudoku.cnf.sat  sudoku.py  timetable4.cnf  timetable5.cnf  unsat.cnf  unsat.smt
solver/test/smt/: bitop_tests.ml  bitvec_tests.ml  bvop_tests.ml  context_tests.ml  dune  smt_tests.ml
solver/test/vm/: dune  parser_tests.ml  vm_tests.ml
solver2/: .gitignore
solver2/backend/: Dockerfile
web-app/: API_Design.md  README.md  docker-compose.yml  nginx.conf
web-app/backend/: Dockerfile  README.md  backend.opam  dune-project  test_command_for_timeout.txt
web-app/backend/data/: dune  sudoku.2x3.cnf  sudoku.3x3.cnf
web-app/backend/lib/: dune  handlers.ml  handlers.mli  hello.ml  logical_solver.ml  logical_solver.mli  routes.ml  routes.mli  sudoku.ml  sudoku.mli  types.ml  utils.ml
web-app/backend/lib/handlers/: dune  formula_handler.ml  formula_handler.mli  handlers.ml  handlers.mli  hello_handler.ml  hello_handler.mli  sudoku_handler.ml  sudoku_handler.mli
web-app/backend/lib/utils/: dune  formula_utils.mli  sudoku_utils.ml  sudoku_utils.mli  types.ml  utils.ml  utils_types.ml
web-app/backend/test/: dune  test_sudoku.ml  test_sudoku_utils.ml  test_utils.ml
web-app/frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  rescript.json  vite.config.js
web-app/frontend/src/: App.res  App.res.mjs  ButtonToBackend.res
web-app/frontend/src/bindings/: ReactToastify.res  ReactToastify.res.mjs
web-app/frontend/src/components/Solver/: SolverIndex.res  SolverIndex.res.mjs
web-app/frontend/src/components/Sudoku/: Cell.res  Cell.res.mjs  Grid.res  Grid.res.mjs  SudokuIndex.res  SudokuIndex.res.mjs
web-app/frontend/src/components/Toast/: Toast.res  Toast.res.mjs  ToastContext.res  ToastContext.res.mjs
web-app/frontend/src/services/: ToastService.res  ToastService.res.mjs
web-app/frontend/src/types/: Types.res
web-app/frontend/src/utilities/: utilities.res  utilities.res.mjs
web-app/frontend/src/utils/: SolverUtils.res  SolverUtils.res.mjs  SudokuUtils.res  SudokuUtils.res.mjs  Utils.res  Utils.res.mjs  utils.res  utils.res.mjs
