(lang dune 3.16)

(name solver)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name solver)
 (synopsis "SAT/SMT solver")
 (description "SAT/SMT solver")
 (depends ocaml dune)
 (tags
  (SMT SAT solver)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
