(lang dune 3.16)

(name solver)

(generate_opam_files true)

(authors "Zihao Wang" "Yisheng Zhu")

(maintainers "zwang484@jh.edu" "yzhu186@jh.edu")

(package
 (name solver)
 (synopsis "A SAT/SMT solver")
 (description "A SAT/SMT solver")
 (depends
  (ounit2
   (>= 2.2.7))
  (core
   (>= 0.17.1))
  (landmarks
   (>= 1.4))
  (landmarks-ppx
   (>= 1.4))
  (bisect_ppx
   (>= 2.8.3))
  (ppx_jane
   (>= 0.17.0))
  (ppx_deriving
   (>= 0.17.0))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
