(lang dune 3.16)

(name backend)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name backend)
 (synopsis "SAT/SMT solver backend")
 (description "SAT/SMT solver backend")
 (depends 
  ocaml 
  dream
  dune
  core
  lwt
  ppx_jane
 )
 (tags
  (SMT SAT solver)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
