(lang dune 3.16)

(name backend)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name backend)
 (synopsis "Demo WebApp backend")
 (description "Demo WebApp backend")
 (depends 
  ocaml 
  dream
  dune
  core
  lwt
  ppx_jane
  yojson
 )
 (tags
  (backend webapp)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
