(lang dune 3.16)

(name backend)

(generate_opam_files true)

(authors "Yisheng Zhu")

(maintainers "Yisheng Zhu")

(license "MIT")

(package
 (name backend)
 (synopsis "WebApp backend")
 (description "WebApp backend")
 (depends 
  ocaml 
  dream
  dune
  core
  lwt
  ppx_jane
  yojson
  ounit2
  solver
 )
 (tags
  (backend webapp)))
