(library
 (name handlers)
 (modules handlers)
 (libraries dream yojson types utils sudoku solver.cdcl solver.dimacs )
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name sudoku)
 (modules sudoku)
 (libraries core types utils)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name types)
 (modules types)
 (libraries core)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name utils)
 (modules utils)
 (libraries dream yojson types)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))  