(library
 (name routes)
 (modules routes)
 (libraries
  dream
  yojson
  types
  utils
  handlers
  sudoku
  logical_solver
  solver.cdcl
  solver.dimacs
  solver.smt
  solver.vm)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))


(library
 (name sudoku)
 (public_name backend.sudoku)
 (modules sudoku)
 (libraries 
  core 
  types 
  utils
  solver.cdcl
  solver.dimacs
  solver.smt
  solver.vm)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name logical_solver)
 (public_name backend.logical_solver)
 (modules logical_solver)
 (libraries 
  core 
  types 
  utils 
  solver.cdcl 
  solver.dimacs 
  solver.smt 
  solver.vm)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name types)
 (public_name backend.types)
 (modules types)
 (libraries core)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name utils)
 (public_name backend.utils)
 (modules utils)
 (libraries dream yojson types)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))
