(library
 (name sudoku_utils)
 (public_name backend.utils.sudoku_utils)
 (modules sudoku_utils)
 (libraries 
  core 
  types
  utils
  solver.cdcl
  solver.dimacs
  solver.smt
  solver.vm)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name formula_utils)
 (public_name backend.utils.formula_utils)
 (modules formula_utils)
 (libraries 
  core 
  types 
  utils 
  solver.cdcl 
  solver.dimacs 
  solver.smt 
  solver.vm)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name types)
 (public_name backend.utils.types)
 (modules types)
 (libraries core)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name utils)
 (public_name backend.utils.utils)
 (modules utils)
 (libraries dream yojson types)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))
